<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="ST_ProductHandlingProdPar" Id="{e74d7f13-f637-401c-a070-4731e595530d}">
    <Declaration><![CDATA[TYPE ST_ProductHandlingProdPar :
STRUCT
	GantryA						: ST_GantryProdPar;
	GantryB						: ST_GantryProdPar;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>